--- a/website/style.css
+++ b/website/style.css
@@ -186,11 +186,14 @@ div#sidebar div.section2 ul { margin-bottom: 2px ; }
 
 div.section3 {
   margin-bottom: 1.2em;
+  padding-left: 2em;
 }
 div.section3-title {
   margin-top: 8px;
   color: #384498;
   font-size: 110%;
+  font-weight: bold;
+  margin-left: -2em;
 }
 div.section4 {
   margin-top: 4px ;
@@ -285,6 +288,27 @@ div.paper-ref-comments { padding-left: 1em; }
 
 div.references {}
 
+pre.r {
+  font-family: courier ;
+  font-weight: bold;
+  color: blue ;
+  padding-left: 1em;
+  padding-right: 1em;
+  border-width: 0 0 0 2px;
+  border-color: blue ;
+  border-style: solid ;
+}
+
+pre.ocaml {
+  font-family: courier ;
+  font-weight: bold;
+  color: green ;
+  padding-left: 1em;
+  padding-right: 1em;
+  border-width: 0 0 0 2px;
+  border-color: green ;
+  border-style: solid ;
+}
 
 /* FOR PRINTERS */
 @media print {
